# Reefscape2025-340

./: README.md  advantagescope.json  build.gradle
.github/workflows/: robot-code.yml
.wpilib/: wpilib_preferences.json
dashboard/: package-lock.json  package.json  svelte.config.js  vite.config.js
dashboard/src/: app.html
dashboard/src-tauri/: Cargo.toml
dashboard/src/lib/: Constants.ts  NTData.ts
dashboard/src/lib/nt/: NT.svelte.ts
dashboard/src/routes/: +page.svelte
old-dashboard/: tsconfig.json
old-dashboard/src/lib/: NTSvelte.ts
src/main/deploy/choreo/: BestTest.traj  Bird-K.traj  Bird-L.traj  Hopper-L.traj  J-Bird.traj  J-Hopper.traj  K-Bird.traj  K-Hopper.traj  L-End.traj  Start-J.traj  autos.chor  fivePointFive.traj  threeScore.traj
src/main/deploy/music/: elevator.chrp
src/main/java/choreo/: Choreo.java
src/main/java/choreo/auto/: AutoChooser.java  AutoFactory.java  AutoRoutine.java  AutoTrajectory.java
src/main/java/choreo/trajectory/: DifferentialSample.java  SwerveSample.java  Trajectory.java  TrajectorySample.java
src/main/java/choreo/util/: ChoreoAlert.java  FieldDimensions.java
src/main/java/org/team340/lib/logging/: EpilogueProxy.java  LoggedRobot.java  Profiler.java
src/main/java/org/team340/lib/math/: FieldFlip.java  FieldInfo.java  Math2.java  PAPFController.java
src/main/java/org/team340/lib/swerve/: Perspective.java  SwerveAPI.java  SwerveAPILogger.java  SwerveModule.java  SwerveState.java
src/main/java/org/team340/lib/tunable/: ThirdParty.java  (+2 more)
src/main/java/org/team340/robot/: Constants.java  Robot.java
(+33 files in other folders)
